# gtkInheritanceTest

src/: CMakeLists.txt
src/cpp/: drawingarea.cpp  main.cpp  window.cpp
src/hpp/: drawingarea.hpp  window.hpp
